--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ daphne==3.0.2
 distlib==0.3.2
 Django==3.2.4
 django-address==0.2.5
+django-cors-headers==3.7.0
 django-environ==0.4.5
 django-multiselectfield==0.1.12
 django-redis==5.0.0
@@ -36,7 +37,6 @@ hyperlink==21.0.0
 idna==2.10
 incremental==21.3.0
 inflection==0.5.1
-django-cors-headers==3.7.0
 itypes==1.2.0
 Jinja2==3.0.1
 jmespath==0.10.0
@@ -46,8 +46,10 @@ openapi-codec==1.3.2
 openpyxl==3.0.7
 packaging==20.9
 pandas==1.2.4
+pathlib==1.0.1
 Pillow==8.2.0
 pipenv==2021.5.29
+psycopg2==2.9.1
 psycopg2-binary==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -57,6 +59,7 @@ pyOpenSSL==20.0.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 redis==3.5.3
 requests==2.25.1
 ruamel.yaml==0.17.9
