--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 
 services:
   web:
@@ -6,7 +6,7 @@ services:
       context: .
 #      args:
 #        SECRET_KEY: ${SECRET_KEY}
-#    env_file: .env
+    env_file: .env
     volumes:
       - ./:/opt/webapp
     ports:
