--- a/requirements.txt
+++ b/requirements.txt
@@ -34,12 +34,14 @@ Faker==8.8.1
 filelock==3.0.12
 gunicorn==20.1.0
 hyperlink==21.0.0
-idna==2.10
+idna==2.6
+importlib-metadata==4.5.0
 incremental==21.3.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.1
 jmespath==0.10.0
+Markdown==3.3.4
 MarkupSafe==2.0.1
 numpy==1.20.3
 openapi-codec==1.3.2
@@ -67,16 +69,18 @@ ruamel.yaml.clib==0.2.2
 s3transfer==0.4.2
 service-identity==21.1.0
 simplejson==3.17.2
-six==1.16.0
+six==1.11.0
 sqlparse==0.4.1
 termcolor==1.1.0
 text-unidecode==1.3
 Twisted==21.2.0
 txaio==21.2.1
+typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.5
 virtualenv==20.4.7
 virtualenv-clone==0.5.4
 websockets==9.1
 whitenoise==5.2.0
+zipp==3.4.1
 zope.interface==5.4.0
