--- a/Pipfile
+++ b/Pipfile
@@ -79,7 +79,6 @@ whitenoise = "==5.2.0"
 zipp = "==3.4.1"
 "zope.interface" = "==5.4.0"
 Automat = "==20.2.0"
-Django = "==3.2.4"
 Faker = "==8.8.1"
 Jinja2 = "==3.0.1"
 Markdown = "==3.3.4"
@@ -89,6 +88,7 @@ PyJWT = "==2.1.0"
 pyOpenSSL = "==20.0.1"
 PyYAML = "==5.4.1"
 Twisted = "==21.2.0"
+django = "*"
 
 [dev-packages]
 
