--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -16,6 +16,7 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - DJANGO_SETTINGS_MODULE=test_28109.settings
     volumes:
       - ./postgres-data/postgres:/var/lib/postgresql/data
     ports:
